testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_digit/case14.expect.out
error: expected hexadecimal digit, found '_'
  ==> case14.cj:13:15:
   | 
13 |     let a = 0x_18
   |               ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found '_'
  ==> case14.cj:14:15:
   | 
14 |     let b = 0x_
   |               ^ expected hexadecimal digit
   | 

error: expected decimal digit, found '_'
  ==> case14.cj:15:19:
   | 
15 |     let d = 10.03e_3
   |                   ^ expected decimal digit
   | 

error: expected hexadecimal digit, found 'new line character'
  ==> case14.cj:16:12:
   | 
16 |     let c = 0x
   |               ^ expected hexadecimal digit
   | 

4 errors generated, 4 errors printed.
